# nm-nebula-plugin

./: Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h  config.status  configure  configure.ac  configure.ac~  configure~  libtool  nm-nebulavpn.name
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  output.6  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6
src/: Makefile  Makefile.am  Makefile.in  go.sum  nm-nebulavpn-editor.c  nm-nebulavpn-editor.go  nm-nebulavpn-service.c  nm-nebulavpn-service.go
src/.deps/: nm_nebulavpn_service-nm-nebulavpn-service.Po
